--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "webpack": "^1.12.2"
   },
   "dependencies": {
-    "react": "^0.13.3"
+    "fbjs": "^0.2.1",
+    "material-ui": "^0.12.3",
+    "react": "^0.13.3",
+    "react-dom": "^0.14.0",
+    "react-tap-event-plugin": "^0.1.8"
   }
 }
