--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "webpack": "^1.12.2"
   },
   "dependencies": {
+    "express": "^4.13.3",
     "fbjs": "^0.2.1",
+    "json-loader": "^0.5.3",
     "material-ui": "^0.12.3",
     "react": "^0.13.3",
     "react-dom": "^0.14.0",
+    "react-router": "^1.0.0-rc3",
     "react-tap-event-plugin": "^0.1.8"
   }
 }
