--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   "dependencies": {
     "express": "^4.13.3",
     "fbjs": "^0.2.1",
+    "jquery": "^2.1.4",
     "json-loader": "^0.5.3",
+    "mariasql": "^0.2.1",
     "material-ui": "^0.12.3",
+    "mysql": "^2.9.0",
     "react": "^0.13.3",
     "react-dom": "^0.14.0",
     "react-router": "^1.0.0-rc3",
