--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "webpack": "^1.12.2"
   },
   "dependencies": {
+    "body-parser": "^1.14.1",
+    "cookie-parser": "^1.4.0",
     "express": "^4.13.3",
+    "express-session": "^1.11.3",
     "fbjs": "^0.2.1",
     "jquery": "^2.1.4",
     "json-loader": "^0.5.3",
     "mariasql": "^0.2.1",
     "material-ui": "^0.12.3",
+    "memcached": "^2.2.0",
     "mysql": "^2.9.0",
     "react": "^0.13.3",
     "react-dom": "^0.14.0",
